# multi-model-rag

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  README_zh.md  SECURITY.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt  setup.py  start.sh
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: linting.yaml  pypi-publish.yml  test.yaml
dashboard/: README.md  next.config.ts  package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/collections/: page.tsx
dashboard/src/app/evaluation/: page.tsx
dashboard/src/app/ingestion/: page.tsx
dashboard/src/app/knowledge-graph/: page.tsx
dashboard/src/app/parser-fleet/: page.tsx
dashboard/src/app/playbooks/: page.tsx
dashboard/src/components/: collections-shell.tsx  dashboard-frame.tsx  dashboard-primitives.tsx  dashboard-shell.tsx  evaluation-shell.tsx  ingestion-shell.tsx  knowledge-constellation.tsx  knowledge-graph-shell.tsx  parser-fleet-shell.tsx  playbooks-shell.tsx  query-composer.tsx  settings-shell.tsx  sidebar.tsx  source-list.tsx  source-viewer-modal.tsx  upload-panel.tsx
dashboard/src/lib/: api.ts  mock-data.ts  types.ts  use-dashboard-data.ts
deploy/: README.md  entrypoint.sh  supervisord.conf
docs/: batch_processing.md  context_aware_processing.md  enhanced_markdown.md  offline_setup.md  quality_upgrades.md  vllm_integration.md
examples/: batch_dry_run_example.py  batch_processing_example.py  enhanced_markdown_example.py  flagembedding_rerank_integration_example.py  image_format_test.py  improvements_example.py  insert_content_list_example.py  lmstudio_integration_example.py  modalprocessors_example.py  multi_model_rag_example.py  office_document_test.py  ollama_integration_example.py  ollama_plain_vs_rag_benchmark.py  text_format_test.py  vllm_integration_example.py
multi_model_rag/: __init__.py  _logging.py  advanced_rag.py  batch.py  batch_parser.py  benchmarking.py  callbacks.py  config.py  dashboard_api.py  document_ir.py  enhanced_markdown.py  improvements.py  modalprocessors.py  multi_model_rag.py  parser.py  processor.py  prompt.py  prompt_manager.py  prompts_zh.py  query.py  rerank.py  resilience.py  utils.py
reproduce/: index.py  query.py
tests/: test_callbacks.py  test_close_event_loop.py  test_core_modules.py  test_custom_parser.py  test_full_entities_merge.py  test_prompt_language.py  test_resilience.py  test_strip_thinking_tags.py  testpaddleocr_parser.py  testparser_kwargs.py  testparser_wiring.py
